plugins/SiteManager/webroot/css/sitemgr-overrides.css
body {
	position:relative;
}

/* ANCHOR FOR PAGE LINKS */
.anchor {
    display: block;
    position: relative;
    top: -60px;
}

/* README NAV */
.nav-readme li a {
	padding: 5px 10px;
}

.nav-readme li a {
	border-left: 2px solid rgba(0,0,0,0);
}

.nav-readme li.active a.top {
	border-left: 2px solid #428BCA;
}

.nav-readme li.sub {
	display:none;
	margin-left: 10px;
}

.nav-readme li.active li.sub {
	display:block;
}

.nav-readme li.sub a {
	border-left: 2px solid rgba(0,0,0,0);
	font-size: 12px;
}

.nav-readme li.sub.active a {
	border-left: 2px solid #428BCA;
}

/* EDIT MODE TOGGLE */
#edit-toggle {
	position:fixed;
	left: 0;
	bottom: 0;
	z-index: 500;
	background-color:#F0AD4E;
	border-top-right-radius: 8px;
	padding: 8px;
	vertical-align: baseline;
}

/* ARTIFACTS */
.artifact-public {
	display:block;
}

.edit-box {
	display:block;
	border: 1px dashed #555555;
	position:absolute;
	left:0;
	top:0;
	width:100%;
	height:100%;
	z-index:200;
}

.artifact-edit {
	display:block;
	position:relative;
}

.artifact-edit:hover .edit-box{
	background-color: rgba(40,40,40, 0.2);
}

/* ELEMENT HELP-BOX */
.help-box {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #5bc0de;
    border-left-width: 10px;
    border-radius: 5px;
}

.help-box h3 {
    margin-top: 0;
    margin-bottom: 15px;
    color: #444444;
}

/* ACTIONS TD - USED FOR BUTTONS IN TABLES */
td.actions {
	width: 100px;
	padding-left: 0px;
	padding-right: 0px;

/* BOOTSTRAP CALLOUTS */

.bs-callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
}
.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}
.bs-callout p:last-child {
    margin-bottom: 0;
}
.bs-callout code {
    border-radius: 3px;
}
.bs-callout+.bs-callout {
    margin-top: -5px;
}
.bs-callout-default {
    border-left-color: #777;
}
.bs-callout-default h4 {
    color: #777;
}
.bs-callout-primary {
    border-left-color: #428bca;
}
.bs-callout-primary h4 {
    color: #428bca;
}
.bs-callout-success {
    border-left-color: #5cb85c;
}
.bs-callout-success h4 {
    color: #5cb85c;
}
.bs-callout-danger {
    border-left-color: #d9534f;
}
.bs-callout-danger h4 {
    color: #d9534f;
}
.bs-callout-warning {
    border-left-color: #f0ad4e;
}
.bs-callout-warning h4 {
    color: #f0ad4e;
}
.bs-callout-info {
    border-left-color: #5bc0de;
}
.bs-callout-info h4 {
    color: #5bc0de;
}

